Fix bugs, Update api reference.
