# server/src/Tarusho.Server/Controllers/api/SearchController.cs
@@ -6,6 +6,10 @@ using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Cors;
 using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Mvc;
+using Microsoft.EntityFrameworkCore.Query;
+using Tarusho.Server.Data;
+using Tarusho.Server.Extensions;
+using Tarusho.Server.Models.Api;
 
 namespace Tarusho.Server.Controllers.api
 {
@@ -15,5 +19,55 @@ namespace Tarusho.Server.Controllers.api
     [Authorize]
     public class SearchController : Controller
     {
+        private readonly ApplicationDbContext _context;
+
+        public SearchController(ApplicationDbContext context)
+        {
+            _context = context;
+        }
+
+
+
+        [Route("object_tags")]
+        [HttpGet()]
+        public async Task<IActionResult> SearchObjectTags(int? category_id= null, string[] keywords = null, int count = 20, int page = 0)
+        {
+            var items = _context.IncludeObjectTagCategory().Select(c => c);
+
+            if (category_id.HasValue)
+            {
+                items = items.Where(c => c.CategoryId == category_id.Value);
+            }
+
+            if (keywords != null)
+            {
+                foreach (var keyword in keywords)
+                {
+                    items = items.Where(c => c.Name.Contains(keyword) || c.Description.Contains(keyword));
+                }
+            }
+
+            var temp = new PaginationItem<ObjectTagResponse>();
+            temp.TotalCount = items.Count();
+
+            // トータルページ数
+            temp.TotalPage = (temp.TotalCount - 1) / count;
+            if (temp.TotalPage < page)
+            {
+                temp.CurrentPage = 0;
+            }
+            else
+            {
+                temp.CurrentPage = page;
+            }
+
+            temp.Items = items.Skip((temp.CurrentPage) * count)
+                              .Take(count)
+                              .Select(c => c.ToApiModel())
+                              .ToList();
+            return Ok(temp);
+        }
+
+
     }
 }
